🏷️ Rebrand application from Music Recommender to Munder
## Changes Made:
✅ Updated all package.json files with new app name
✅ Renamed Docker containers and services (munder-db, munder-api, munder-web)
✅ Updated docker-compose.yml with new container names and database
✅ Changed Cloudflare tunnel name to 'munder'
✅ Updated README and DEPLOYMENT documentation
✅ Renamed frontend app title and manifest
✅ Updated deployment scripts and systemd service
✅ Changed database name from 'music-recommender' to 'munder'
✅ Updated MongoDB initialization script
✅ Renamed systemd service file to munder.service

The application is now consistently branded as 'Munder' across all configurations!

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-# Production Environment Configuration for Music Recommender
+# Production Environment Configuration for Munder
 # Copy this file to .env and update with your actual values
 
 # Application Environment
@@ -7,10 +7,10 @@ PORT=3001
 FRONTEND_URL=https://music-recommender.yourdomain.com
 
 # Database Configuration
-MONGODB_URI=mongodb://musicrecommender:CHANGE_THIS_PASSWORD@localhost:27017/music-recommender?authSource=admin
-MONGO_ROOT_USERNAME=musicrecommender
+MONGODB_URI=mongodb://munder:CHANGE_THIS_PASSWORD@localhost:27017/munder?authSource=admin
+MONGO_ROOT_USERNAME=munder
 MONGO_ROOT_PASSWORD=CHANGE_THIS_PASSWORD
-MONGO_DATABASE=music-recommender
+MONGO_DATABASE=munder
 
 # Redis Configuration
 REDIS_URL=redis://:CHANGE_THIS_PASSWORD@localhost:6379
