--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Music Recommender",
-  "name": "AI-Powered Music Recommendation System",
+  "short_name": "Munder",
+  "name": "Munder - AI-Powered Music Recommendation System",
   "icons": [
     {
       "src": "favicon.ico",
