--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -9,7 +9,7 @@ COPY package*.json ./
 
 # Install dependencies
 WORKDIR /app/client
-RUN npm ci --only=production && npm cache clean --force
+RUN npm ci && npm cache clean --force
 
 # Copy source code
 COPY client/ ./
