--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -33,16 +33,17 @@ COPY --from=builder /app/client/build /usr/share/nginx/html
 # Copy custom nginx configuration
 COPY nginx.frontend.conf /etc/nginx/conf.d/default.conf
 
-# Create non-root user
-RUN addgroup -g 1001 -S nginx && \
-    adduser -S nginxuser -u 1001 -G nginx
+# Create non-root user (use existing nginx group or create new one)
+RUN adduser -S nginxuser -u 1001 -G nginx 2>/dev/null || \
+    (addgroup -g 1001 -S munder-nginx && adduser -S nginxuser -u 1001 -G munder-nginx)
 
 # Change ownership of nginx directories
-RUN chown -R nginxuser:nginx /var/cache/nginx && \
-    chown -R nginxuser:nginx /var/log/nginx && \
-    chown -R nginxuser:nginx /etc/nginx/conf.d && \
+RUN GROUP=$(id -gn nginxuser) && \
+    chown -R nginxuser:$GROUP /var/cache/nginx && \
+    chown -R nginxuser:$GROUP /var/log/nginx && \
+    chown -R nginxuser:$GROUP /etc/nginx/conf.d && \
     touch /var/run/nginx.pid && \
-    chown -R nginxuser:nginx /var/run/nginx.pid
+    chown -R nginxuser:$GROUP /var/run/nginx.pid
 
 # Switch to non-root user
 USER nginxuser
