--- a/.env.production
+++ b/.env.production
@@ -4,7 +4,7 @@
 # Application Environment
 NODE_ENV=production
 PORT=3001
-FRONTEND_URL=https://music-recommender.yourdomain.com
+FRONTEND_URL=https://munder.myghty.cloud
 
 # Database Configuration
 MONGODB_URI=mongodb://munder:CHANGE_THIS_PASSWORD@localhost:27017/munder?authSource=admin
@@ -23,7 +23,7 @@ JWT_SECRET=CHANGE_THIS_TO_A_LONG_RANDOM_STRING
 # Get these from https://developer.spotify.com/dashboard/applications
 SPOTIFY_CLIENT_ID=your_spotify_client_id_here
 SPOTIFY_CLIENT_SECRET=your_spotify_client_secret_here
-SPOTIFY_REDIRECT_URI=https://music-recommender.yourdomain.com/auth/callback
+SPOTIFY_REDIRECT_URI=https://munder.myghty.cloud/auth/callback
 
 # Weather API Configuration
 # Get from https://openweathermap.org/api
