Fix Spotify OAuth redirect URI
Update redirect URI from /auth/callback to /api/auth/spotify/callback
to match the server route configuration and resolve INVALID_CLIENT error.

--- a/.env.production
+++ b/.env.production
@@ -23,7 +23,7 @@ JWT_SECRET=CHANGE_THIS_TO_A_LONG_RANDOM_STRING
 # Get these from https://developer.spotify.com/dashboard/applications
 SPOTIFY_CLIENT_ID=your_spotify_client_id_here
 SPOTIFY_CLIENT_SECRET=your_spotify_client_secret_here
-SPOTIFY_REDIRECT_URI=https://munder.myghty.cloud/auth/callback
+SPOTIFY_REDIRECT_URI=https://munder.myghty.cloud/api/auth/spotify/callback
 
 # Weather API Configuration
 # Get from https://openweathermap.org/api
