--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "redis": "^4.6.11",
     "spotify-web-api-node": "^5.0.2",
     "uuid": "^9.0.1",
-    "winston": "^3.11.0"
+    "winston": "^3.11.0",
+    "winston-transport": "^4.6.0",
+    "kafkajs": "^2.2.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
